--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-.i64 filter=lfs diff=lfs merge=lfs -text
-.idb filter=lfs diff=lfs merge=lfs -text
+*.i64 filter=lfs diff=lfs merge=lfs -text
+*.idb filter=lfs diff=lfs merge=lfs -text
